# pollenlevels

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md  changelog.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements_test.txt  sitecustomize.py
.github/workflows/: codeql.yml  format.yml  hassfest.yml  lint.yml  package-test.yml  release-asset.yml  release.yml  tests.yml  validate.yml
custom_components/: __init__.py
custom_components/pollenlevels/: __init__.py  button.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity_helpers.py  forecast.py  issue_helpers.py  manifest.json  migration.py  runtime.py  sensor.py  services.yaml  summary.py  util.py
custom_components/pollenlevels/translations/: ca.json  cs.json  da.json  de.json  en.json  es.json  fi.json  fr.json  hu.json  it.json  nb.json  nl.json  pl.json  pt-BR.json  pt-PT.json  ro.json  ru.json  sv.json  uk.json  zh-Hans.json  zh-Hant.json
github/: FUNDING.yml
scripts/: validate_release_zip.py
tests/: __init__.py  _ha_stubs.py  conftest.py  ha_helpers.py  test_button.py  test_client.py  test_config_flow.py  test_diagnostics.py  test_entity_helpers.py  test_forecast.py  test_ha_config_flow.py  test_ha_diagnostics.py  test_ha_init.py  test_ha_migration.py  test_ha_platforms.py  test_ha_services.py  test_init.py  test_metadata.py  test_migration.py  test_options_flow.py  test_secret_hygiene.py  test_sensor.py  test_sensor_plant_advice.py  test_stub_hygiene.py  test_summary.py  test_summary_contract.py  test_translations.py  test_util.py  test_validate_release_zip.py
tests/fixtures/: google_pollen_forecast_5_days.json
