# Tooling aligned to the Home Assistant Python floor (>=3.14.0).
# NOTE: We purposely DO NOT set [tool.black].required-version; CI installs
# Black/Ruff from minimum supported versions to keep tooling forward-compatible.
# Minimums: black>=26, ruff>=0.15 (set in CI workflows).
# If you ever need an exact lock, set both:
#   - pyproject: required-version = "<desired black version>"
#   - CI: pip install "black==<desired black version>" "ruff==<desired ruff version>"

[project]
name = "pollenlevels"
version = "3.0.0b5"
# Enforce the runtime floor aligned with Home Assistant Python 3.14 images.
requires-python = ">=3.14"

[tool.black]
line-length = 88
# Black supports py314; keep a single target since the project requires 3.14+.
target-version = ["py314"]
# Do NOT set required-version here to stay compatible with CI's rolling installs.

[tool.ruff]
line-length = 88
# Match runtime: Python 3.14
target-version = "py314"
# Do not set a default global 'fix' here; workflows control fixing with CLI flags.

[tool.ruff.lint]
# Core rule sets: pycodestyle/pyflakes/isort/pyupgrade/bugbear
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
  "E203", # Whitespace before ':' (conflicts with Black on slicing)
  "E501", # Line length (Black handles wrapping)
]

[tool.ruff.lint.isort]
# IMPORTANT: first-party must match this integration's package
known-first-party = ["custom_components.pollenlevels"]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# --- Optional hardening (uncomment if needed) ---
# [tool.ruff]
# force-exclude = true
# exclude = [".git", ".venv", "venv", ".mypy_cache", ".pytest_cache", "build", "dist"]

# If you re-export symbols in __init__.py and want to ignore F401 there:
# [tool.ruff.per-file-ignores]
# "custom_components/pollenlevels/__init__.py" = ["F401"]
