# Tooling aligned to the Home Assistant Python floor (>=3.14.0).
# CI installs Ruff from the rolling minimum version, while required-version
# rejects older local versions and allows future compatible stable releases.

[project]
name = "pollenlevels"
version = "3.0.0rc3"
# Enforce the runtime floor aligned with Home Assistant Python 3.14 images.
requires-python = ">=3.14"

[tool.ruff]
required-version = ">=0.15"
line-length = 88
# Match runtime: Python 3.14
target-version = "py314"
preview = false
# Do not set a default global 'fix' here; workflows control fixing with CLI flags.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
preview = false

[tool.ruff.lint]
# Core rule sets: pycodestyle/pyflakes/isort/pyupgrade/bugbear
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
  "E203", # Whitespace before ':' in slicing
  "E501", # Line length (Ruff formatter handles wrapping)
]

[tool.ruff.lint.isort]
# IMPORTANT: first-party must match this integration's package
known-first-party = ["custom_components.pollenlevels"]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# --- Optional hardening (uncomment if needed) ---
# [tool.ruff]
# force-exclude = true
# exclude = [".git", ".venv", "venv", ".mypy_cache", ".pytest_cache", "build", "dist"]

# If you re-export symbols in __init__.py and want to ignore F401 there:
# [tool.ruff.per-file-ignores]
# "custom_components/pollenlevels/__init__.py" = ["F401"]
